--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "redux-saga-example",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://amit-vinove.github.io/UFIRM",
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@lourenci/react-kanban": "^2.1.0",
@@ -13,6 +14,7 @@
     "draftjs-to-html": "^0.9.1",
     "es6-promise": "^4.2.8",
     "file-saver": "^2.0.5",
+    "gh-pages": "^4.0.0",
     "html-to-draftjs": "^1.5.0",
     "i": "^0.3.7",
     "immutable": "^4.0.0-rc.12",
@@ -48,6 +50,8 @@
     "react-trello": "^2.2.10"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
