--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-trello": "^2.2.10"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
