--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-images-upload": "^1.2.8",
     "react-loading-overlay": "^1.0.1",
     "react-multiselect-checkboxes": "^0.1.1",
-    "react-pdf": "^5.3.0",
+    "react-pdf": "^5.7.2",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^7.2.2",
     "react-responsive-modal": "^6.2.0",
@@ -55,6 +55,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/react-pdf": "^5.7.3",
     "connected-react-router": "^6.2.0-beta.3",
     "envify": "^4.1.0",
     "react-scripts": "2.1.8",
