--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-datepicker": "^4.5.0",
     "react-dom": "^16.4.1",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-export-table-to-excel": "^1.0.6",
     "react-file-previewer": "^0.6.3",
     "react-fontawesome": "^1.7.1",
     "react-images-upload": "^1.2.8",
