--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@lourenci/react-kanban": "^2.1.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "chart.js": "^3.0.0",
     "chroma-js": "^2.1.1",
     "date-fns": "^2.27.0",
     "draft-js": "^0.11.7",
@@ -20,17 +21,18 @@
     "messageformat": "^2.3.0",
     "moment": "^2.29.4",
     "npm": "^7.7.5",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-awesome-modal": "^2.0.5",
     "react-big-calendar": "^0.33.2",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-typeahead": "^5.1.2",
+    "react-chartjs-2": "^4.2.0",
     "react-collapse": "^5.1.1",
     "react-color": "^2.19.3",
     "react-csv": "^2.2.2",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.5.0",
-    "react-dom": "^16.4.1",
+    "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.14.7",
     "react-export-table-to-excel": "^1.0.6",
     "react-file-previewer": "^0.6.3",
